Uploaded image for project: 'MariaDB Server'
  1. MariaDB Server
  2. MDEV-40019

Xmlisvalid shows wrong result if calling it multiple times from query with UNION ALL

    XMLWordPrintable

Details

    • Bug
    • Status: Closed (View Workflow)
    • Major
    • Resolution: Fixed
    • None
    • 13.1.1
    • XML
    • None
    • Can result in hang or crash
    • Q3/2026 Server Maintenance

    Description

      bb-13.1-mdev-37262-hf b75702097e55151cfb

      SELECT XMLISVALID('<sc><kfjfn>56.4E3</kfjfn></sc>', '<xs:schema xmlns:xs="http://www.w3.org/2001/XMLSchema"><xs:element name="sc"><xs:complexType><xs:sequence><xs:element name="kfjfn" type="xs:double"/><xs:element name="ugrx" type="xs:decimal" minOccurs="0"/></xs:sequence></xs:complexType></xs:element></xs:schema>') AS a;
       
       
      SELECT XMLISVALID('<sc><kfjfn>56.4E3</kfjfn></sc>', '<xs:schema xmlns:xs="http://www.w3.org/2001/XMLSchema"><xs:element name="sc"><xs:complexType><xs:sequence><xs:element name="kfjfn" type="xs:double"/><xs:element name="ugrx" type="xs:decimal" minOccurs="0"/></xs:sequence></xs:complexType></xs:element></xs:schema>') AS a
      UNION ALL 
      SELECT XMLISVALID('<sc><kfjfn>56.4E3</kfjfn></sc>', '<xs:schema xmlns:xs="http://www.w3.org/2001/XMLSchema"><xs:element name="sc"><xs:complexType><xs:sequence><xs:element name="kfjfn" type="xs:double"/><xs:element name="ugrx" type="xs:decimal" minOccurs="0"/></xs:sequence></xs:complexType></xs:element></xs:schema>') AS a
      UNION ALL 
      SELECT XMLISVALID('<sc><kfjfn>56.4E3</kfjfn></sc>', '<xs:schema xmlns:xs="http://www.w3.org/2001/XMLSchema"><xs:element name="sc"><xs:complexType><xs:sequence><xs:element name="kfjfn" type="xs:double"/><xs:element name="ugrx" type="xs:decimal" minOccurs="0"/></xs:sequence></xs:complexType></xs:element></xs:schema>') AS a
      UNION ALL 
      SELECT XMLISVALID('<sc><kfjfn>56.4E3</kfjfn></sc>', '<xs:schema xmlns:xs="http://www.w3.org/2001/XMLSchema"><xs:element name="sc"><xs:complexType><xs:sequence><xs:element name="kfjfn" type="xs:double"/><xs:element name="ugrx" type="xs:decimal" minOccurs="0"/></xs:sequence></xs:complexType></xs:element></xs:schema>') AS a
      UNION ALL 
      SELECT XMLISVALID('<sc><kfjfn>56.4E3</kfjfn></sc>', '<xs:schema xmlns:xs="http://www.w3.org/2001/XMLSchema"><xs:element name="sc"><xs:complexType><xs:sequence><xs:element name="kfjfn" type="xs:double"/><xs:element name="ugrx" type="xs:decimal" minOccurs="0"/></xs:sequence></xs:complexType></xs:element></xs:schema>') AS a
      UNION ALL 
      SELECT XMLISVALID('<sc><kfjfn>56.4E3</kfjfn></sc>', '<xs:schema xmlns:xs="http://www.w3.org/2001/XMLSchema"><xs:element name="sc"><xs:complexType><xs:sequence><xs:element name="kfjfn" type="xs:double"/><xs:element name="ugrx" type="xs:decimal" minOccurs="0"/></xs:sequence></xs:complexType></xs:element></xs:schema>') AS a
      UNION ALL 
      SELECT XMLISVALID('<sc><kfjfn>56.4E3</kfjfn></sc>', '<xs:schema xmlns:xs="http://www.w3.org/2001/XMLSchema"><xs:element name="sc"><xs:complexType><xs:sequence><xs:element name="kfjfn" type="xs:double"/><xs:element name="ugrx" type="xs:decimal" minOccurs="0"/></xs:sequence></xs:complexType></xs:element></xs:schema>') AS a
      UNION ALL 
      SELECT XMLISVALID('<sc><kfjfn>56.4E3</kfjfn></sc>', '<xs:schema xmlns:xs="http://www.w3.org/2001/XMLSchema"><xs:element name="sc"><xs:complexType><xs:sequence><xs:element name="kfjfn" type="xs:double"/><xs:element name="ugrx" type="xs:decimal" minOccurs="0"/></xs:sequence></xs:complexType></xs:element></xs:schema>') AS a
      UNION ALL 
      SELECT XMLISVALID('<sc><kfjfn>56.4E3</kfjfn></sc>', '<xs:schema xmlns:xs="http://www.w3.org/2001/XMLSchema"><xs:element name="sc"><xs:complexType><xs:sequence><xs:element name="kfjfn" type="xs:double"/><xs:element name="ugrx" type="xs:decimal" minOccurs="0"/></xs:sequence></xs:complexType></xs:element></xs:schema>') AS a
      UNION ALL 
      SELECT XMLISVALID('<sc><kfjfn>56.4E3</kfjfn></sc>', '<xs:schema xmlns:xs="http://www.w3.org/2001/XMLSchema"><xs:element name="sc"><xs:complexType><xs:sequence><xs:element name="kfjfn" type="xs:double"/><xs:element name="ugrx" type="xs:decimal" minOccurs="0"/></xs:sequence></xs:complexType></xs:element></xs:schema>') AS a
      ;
      

       ...
      SELECT XMLISVALID('<sc><kfjfn>56.4E3</kfjfn></sc>', '<xs:schema xmlns:xs="http://www.w3.org/2001/XMLSchema"><xs:element name="sc"><xs:complexType><xs:sequence><xs:element name="kfjfn" type="xs:double"/><xs:element name="ugrx" type="xs:decimal" minOccurs="0"/></xs:sequence></xs:complexType></xs:element></xs:schema>') AS a
      UNION ALL 
      SELECT XMLISVALID('<sc><kfjfn>56.4E3</kfjfn></sc>', '<xs:schema xmlns:xs="http://www.w3.org/2001/XMLSchema"><xs:element name="sc"><xs:complexType><xs:sequence><xs:element name="kfjfn" type="xs:double"/><xs:element name="ugrx" type="xs:decimal" minOccurs="0"/></xs:sequence></xs:complexType></xs:element></xs:schema>') AS a
      UNION ALL 
      SELECT XMLISVALID('<sc><kfjfn>56.4E3</kfjfn></sc>', '<xs:schema xmlns:xs="http://www.w3.org/2001/XMLSchema"><xs:element name="sc"><xs:complexType><xs:sequence><xs:element name="kfjfn" type="xs:double"/><xs:element name="ugrx" type="xs:decimal" minOccurs="0"/></xs:sequence></xs:complexType></xs:element></xs:schema>') AS a
      ;
      a
      1
      1
      1
      0
      1
      1
      1
      1
      1
      0
      

      Attachments

        Issue Links

          Activity

            People

              holyfoot Alexey Botchkov
              alice Alice Sherepa
              Votes:
              0 Vote for this issue
              Watchers:
              3 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved:

                Time Tracking

                  Estimated:
                  Original Estimate - 1d 34m
                  1d 34m
                  Remaining:
                  Remaining Estimate - 0d
                  0d
                  Logged:
                  Time Spent - 4.75h Time Not Required
                  4.75h

                  Git Integration

                    Error rendering 'com.xiplink.jira.git.jira_git_plugin:git-issue-webpanel'. Please contact your Jira administrators.