plugin/type_xmltype/item_func_xml_isvalid.cc
@@ -1747,6 +1747,9 @@ turn_over:
       if (!m_cur_tag->is_validate_done())
         return false;
       m_cur_tag= m_cur_tag->m_next_tag;
+      if (m_cur_tag)
+        m_cur_tag->validate_prepare();
+
     }
 
     return true;
